<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/notifications_check"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_request_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notifications_message"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/approve_req_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_check"
        style="@style/notification_header" />

    <TextView
        android:id="@+id/notifications_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/text_placeholder"
        android:textColor="@color/colorText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_message" />

    <TextView
        android:id="@+id/notifications_details_header"
        android:layout_marginTop="24dp"
        android:text="Request Details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_description"
        style="@style/notification_green_header" />

    <TextView
        android:id="@+id/notifications_name_header"
        android:text="@string/home_name_header"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_details_header"
        style="@style/notification_header" />

    <TextView
        android:id="@+id/notifications_name"
        android:text="Julea Artiom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_name_header"
        tools:text="Julea Artiom"
        style="@style/notification_result" />

    <TextView
        android:id="@+id/notifications_disease_header"
        android:text="@string/home_disease_header"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_name"
        style="@style/notification_header" />

    <TextView
        android:id="@+id/notifications_disease"
        android:text="Covid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifications_disease_header"
        style="@style/notification_result" />

    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="24dp"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications_disease"
        style="@style/notification_header" />

    <TextView
        android:id="@+id/textView3"
        style="@style/notification_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="str. Studentilor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        style="@style/notification_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        style="@style/notification_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor id aliquet lectus proin nibh nisl."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        style="@style/notification_green_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/notif_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="1dp"
        app:cardElevation="1dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textView6"
        app:layout_constraintTop_toBottomOf="@id/textView6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:paddingTop="16dp"
            android:paddingRight="30dp"
            android:paddingBottom="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/notif_doctor_info_photo"
                android:layout_width="@dimen/doctor_photo_w"
                android:layout_height="@dimen/doctor_photo_h"
                android:src="@drawable/doctor_photo"
                app:civ_border_color="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/notif_doctor_info_name"
                style="@style/notification_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/doctor_name_margin_start"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:text="Dudung Sokmati"
                app:layout_constraintStart_toEndOf="@+id/notif_doctor_info_photo"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/notif_doctor_info_specialty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/specialty_and_rating_margin_top"
                android:fontFamily="@font/font_family_proxima_nova"
                android:text="Eye Specialist"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/smaller_text_size"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@id/notif_doctor_info_name"
                app:layout_constraintTop_toBottomOf="@id/notif_doctor_info_name" />

            <RatingBar
                android:id="@+id/notif_doctor_info_rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="@dimen/specialty_and_rating_margin_top"
                android:max="5"
                android:numStars="5"
                android:rating="4.5"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:stepSize="0.1"
                android:theme="@style/RatingBar"
                app:layout_constraintStart_toStartOf="@id/notif_doctor_info_specialty"
                app:layout_constraintTop_toBottomOf="@id/notif_doctor_info_specialty" />

            <TextView
                android:id="@+id/notif_doctor_info_rating_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="4.5"
                android:textColor="@color/colorText2"
                android:textSize="@dimen/smaller_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/notif_doctor_info_rating_bar"
                app:layout_constraintStart_toEndOf="@id/notif_doctor_info_rating_bar"
                app:layout_constraintTop_toTopOf="@id/notif_doctor_info_rating_bar" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        style="@style/green_filled_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notif_card_view" />

    <RelativeLayout
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button_gray_hollow"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@android:string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/gray_special"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>